# minitraderoute

./: Cargo.toml  README.md
.cargo/: config.toml
src/: cli.rs  components.rs  main.rs  systems.rs  world.rs
src/audio/: mod.rs  sound.rs
