[package]
name = "minitraderoute"
version = "0.1.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
pixels = { version = "0.2" }
raqote = { version = "0.8" }
winit = "0.23"
winit_input_helper = "0.8"
rand = "0.7"
rand_xoshiro = "0.4"
# shipyard = "0.4"
shipyard = { git = "https://github.com/leudz/shipyard.git" }
simplelog = { version = "0.8", default-features = false }
structopt = "0.3"
rayon = "1.5"
rodio = "0.12.0"

[patch.crates-io]
pixels = { git = "https://github.com/svenstaro/pixels.git", branch = "fix-outofdate-swapchain" }

[profile.release]
# lto = true
# codegen-units = 1
